dev/manifests/3rd-party/kafka/kafka-network-policy.yml
---
# Source: xxxxx/templates/kafka-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-extra-egress
  annotations:
    pia-team.com/role: pia.k8s.kafka/0.4.1
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 2181
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kafka
  policyTypes:
  - Egress
