dev/manifests/3rd-party/kafka/networkpolicy-ingress.yaml
---
# Source: kafka/templates/networkpolicy-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafka-ingress
  namespace: "hornet"
  labels:
    app.kubernetes.io/name: kafka
    helm.sh/chart: kafka-18.4.2
    app.kubernetes.io/instance: kafka
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/app: kafka
    pia-team.com/app-logo: kafka
    pia-team.com/app-title: Kafka
    pia-team.com/role: pia.k8s.kafka/0.4.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kafka
      app.kubernetes.io/instance: kafka
  policyTypes:
  - Ingress
  ingress:
    # Allow client connections
  - ports:
    - port: 9092
    # Allow communication inter-broker
  - ports:
    - port: 9093
    from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: kafka
          app.kubernetes.io/instance: kafka
    # Allow External connection
